Fix errors on the lab upload form and re-style lab summary cards.
Fixed an issue involving the lab header image in the 'upload lab' view that would cause uploading a new lab to fail. In addition, create a template for lab summaries that can be {% include %}'d into another template, and re-style the summary card.

Squashed commit of the following:

commit 69da317cb9ab4110f37d4482304c18d085c2e45f
Author: kernelmethod <17100608+kernelmethod@users.noreply.github.com>
Date:   Sat Dec 21 23:47:04 2019 -0700

    Place lab summary cards on the 'available labs' page four-per-row, with reduced horizontal margins. Allow the action icons (start / stop / settings) to scale with the size of the screen.

commit 1898e63a79180f15cd94a7b67916c85eaaa9cb3b
Author: kernelmethod <17100608+kernelmethod@users.noreply.github.com>
Date:   Sat Dec 21 23:38:58 2019 -0700

    Fix disproportionate image dimensions on the lab summary cards.

commit de6676737603ff40f39f9055bf2bf705f02f6368
Author: kernelmethod <17100608+kernelmethod@users.noreply.github.com>
Date:   Sat Dec 21 23:32:10 2019 -0700

    Remove default Cutter lab summary card that appeared on the site. Create a summary card template that we use instead to display the available environments.

commit ba07181851c1857d2b3f6ee4c68297eb7881ce3c
Author: kernelmethod <17100608+kernelmethod@users.noreply.github.com>
Date:   Sat Dec 21 23:15:17 2019 -0700

    Force an error if someone tries to save an environment to the database with an empty name or url.

commit 93cc2d388e5a3ecadfb00c55320a5518825b2366
Author: kernelmethod <17100608+kernelmethod@users.noreply.github.com>
Date:   Sat Dec 21 23:06:10 2019 -0700

    Add a lower margin on all dashboard pages.

commit c950502cc5b2ecd72f9ee7a406e90172d0774d13
Author: kernelmethod <17100608+kernelmethod@users.noreply.github.com>
Date:   Sat Dec 21 23:04:54 2019 -0700

    Fix the lab upload form so that we don't get the error about missing header images.

commit 95462b9b4caa8ca1eeb0017b645edfa98

--- a/lawliet/assets/css/style.css
+++ b/lawliet/assets/css/style.css
@@ -2,21 +2,6 @@
   max-width: 500px;
 }
 
-.lab-card {
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
-.lab-button {
-  border-width: 0.15rem;
-  border-color: black;
-}
-
-.lab-action-icon {
-  max-height: 1rem;
-  max-width: 1rem;
-}
-
 a, a:hover, a:visited {
   text-decoration: none !important;
 }
@@ -39,6 +24,25 @@ input.remember-me {
 /* Styling for the site logo */
 .site-logo {
   font-family: lobster two, roboto, sans-serif !important;
+}
+
+/***********************************
+ * Lab card
+ ***********************************/
+.lab-img {
+  max-height: 100%;
+  max-width: 100%;
+  display: inline-block;
+}
+
+.lab-button {
+  border-width: 0.15rem;
+  border-color: black;
+}
+
+.lab-action-icon {
+  max-height: 1rem;
+  max-width: 1rem;
 }
 
 /***********************************
